Removed trailing comma from JSON object.

--- a/website/content/api-docs/acl/binding-rules.mdx
+++ b/website/content/api-docs/acl/binding-rules.mdx
@@ -145,7 +145,7 @@ The table below shows this endpoint's support for
   "AuthMethod": "auth0",
   "Selector": "engineering in list.roles",
   "BindType": "role",
-  "BindName": "eng-ro",
+  "BindName": "eng-ro"
 }
 ```
 
